@@ -18,7 +18,6 @@ import com.palmergames.bukkit.towny.tasks.GatherResidentUUIDTask;
 import org.bukkit.entity.Player;
 
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
@@ -162,27 +161,19 @@ public abstract class TownyDataSource {
 
 		TownyMessaging.sendDebugMsg("Loading Residents");
 
-		List<Resident> toRemove = new ArrayList<>();
 		TownySettings.setUUIDCount(0);
 		
-		for (Resident resident : new ArrayList<>(getResidents()))
+		for (Resident resident : getResidents()) {
 			if (!loadResident(resident)) {
 				System.out.println("[Towny] Loading Error: Could not read resident data '" + resident.getName() + "'.");
-				toRemove.add(resident);
-				//return false;
-			} else {
-				if (resident.hasUUID())
-					TownySettings.incrementUUIDCount();
-				else
-					GatherResidentUUIDTask.addResident(resident);
+				return false;
 			}
 
-		// Remove any resident which failed to load.
-		for (Resident resident : toRemove) {
-			System.out.println("[Towny] Loading Error: Removing resident data for '" + resident.getName() + "'.");
-			removeResident(resident);
+			if (resident.hasUUID())
+				TownySettings.incrementUUIDCount();
+			else
+				GatherResidentUUIDTask.addResident(resident);
 		}
-
 		return true;
 	}
 
